# watchdog

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: auditor.rs  changelog.rs  config.rs  hooks.rs  imports.rs  lockwatch.rs  main.rs  models.rs  rules.rs  session.rs  transcript.rs
cli/src/server/: api.rs  audit.rs  dashboard.rs  discover.rs  fs.rs  hooks.rs  mod.rs  status.rs  terminal.rs
dashboard-web/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-web/src/: App.tsx  index.css
dashboard-web/src/components/: DebugOverlay.tsx  Toast.tsx  shared.tsx
dashboard-web/src/components/graph/: GraphSettingsPopover.tsx  GraphView.tsx  NodeDetailCard.tsx
dashboard-web/src/components/panels/: AuditPanel.tsx  ChangesPanel.tsx  FilesTab.tsx  ProjectExplorer.tsx  SessionSettingsModal.tsx  SpecPanel.tsx  TerminalPanel.tsx
dashboard-web/src/hooks/: useNotifications.ts  useWatchdogStore.ts
dashboard-web/src/models/: types.ts
dashboard-web/src/services/: api-client.ts  diff-parser.ts  model-mapping.ts  websocket-client.ts
examples/: SPEC.md  rules.yml
scripts/: homebrew-formula.template.rb  install.sh
